--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-jwt": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "utility": "^1.16.3"
   }
 }
